# llama-index-tools-talordata-serp

./: .gitignore  README.md  pyproject.toml
llama_index/tools/talordata_serp/: __init__.py  base.py  client.py  manual_check.py  normalizer.py
scripts/: manual_serp_proxy_check.py
tests/: test_client.py  test_manual_check.py  test_normalizer.py  test_public_import.py  test_tool_spec.py
